# Quantization

./: .gitignore  README.md  pyproject.toml
core/: quantization.py
core/common/: utils.py
core/models/: base_model.py  easy_quant.py  squeeze_llm.py
core/utils/: model_copy.py  quantization_helpers.py
script/: quantize_simple_model.ipynb  quantize_vector.ipynb
test/: test_layer_quantization.py
utils/: perplexity.py  text_generation.py
