[tool.poetry]
name = "quantization"
version = "0.1.0"
description = ""
authors = ["TokuyuSou <soutokuyu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
torch = "^2.5.1"
ipykernel = "^6.29.5"
transformers = "^4.46.2"
tqdm = "^4.67.0"
datasets = "^3.1.0"
accelerate = "^1.1.1"
evaluate = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
